--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     width:100%;
     float:left;
     text-align:center;
-    background-color:skyblue;
+    background-color:rgb(235, 135, 135);
 }
     
 #logo{
