--- a/style.css
+++ b/style.css
@@ -54,3 +54,80 @@ body{
 #menu ul li a:hover{
     color:black;
 }
+
+
+@media only screen and (max-width: 590px) {
+	#header
+	{
+		font-size:14px;
+	}
+	#logo
+	{
+		width:100%;
+		float:left;
+		text-align:center;
+	}
+	#menu
+	{
+		width:100%;
+		margin: 0 auto;
+	}
+	#menu ul
+	{
+		float:none;
+		margin-right:0px;
+	}
+}
+@media only screen and (max-width: 320px) {
+	#header
+	{
+		font-size:12px;
+	}
+	#logo h1
+	{
+		margin-bottom:1%;
+
+	}
+	  #menu ul li
+	{
+		display:block;
+	}
+ }
+
+ @media only screen and (max-width: 590px) {
+	#header
+	{
+		font-size:14px;
+	}
+	#logo
+	{
+		width:100%;
+		float:left;
+		text-align:center;
+	}
+	#menu
+	{
+		width:100%;
+		margin: 0 auto;
+	}
+	#menu ul
+	{
+		float:none;
+		margin-right:0px;
+	}
+}
+@media only screen and (max-width: 320px) {
+	#header
+	{
+		font-size:12px;
+	}
+	#logo h1
+	{
+		margin-bottom:1%;
+
+	}
+	  #menu ul li
+	{
+		display:block;
+	}
+ }
