--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     width:100%;
     float:left;
     text-align:center;
-    background-color:rgb(103, 178, 180);
+    background-color: #f00;
 }
     
 #logo{
