--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     width:100%;
     float:left;
     text-align:center;
-    background-color: #f00;
+    background: #f00;
 }
     
 #logo{
@@ -111,7 +111,7 @@ footer .container h2::before{
 	left: 0;
 	width: 50px;
 	height: 2px;
-	background: #f00;
+	background: linear-gradient(90deg, rgba(170,0,0,1) 0%, rgba(191,0,0,1) 35%, rgba(255,0,0,1) 100%);
 }
 
 footer p {
