--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body{
 }
 
 #header{
+	position: fixed;
+	top: 0;
     width:100%;
     float:left;
     text-align:center;
@@ -61,6 +63,7 @@ body{
 #menu ul li a:hover{
     color:black;
 }
+
 
 #footer-div {
 	position: fixed;
