--- a/style.css
+++ b/style.css
@@ -133,10 +133,250 @@ nav .fas {
 		padding: 30px;
 	}
 }
+/* Exhibitions */
 
 .exhibition { 
 	width: 80%;
 	margin: auto;
 	text-align: center;
 	padding-top: 100px;
+}
+
+h1{
+	font-size: 36px;
+	font-weight: 600;
+}
+
+p{
+	color: #777;
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 22px;
+	padding: 10px;
+}
+
+.row1{
+	margin-top: 5%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.exhibition-col1{
+	flex-basis: 31%;
+	background: #fff3f3;
+	border-radius: 10px;
+	margin-bottom: 5%;
+	padding: 20px 10px;
+	box-sizing: border-box;
+	transition: 0.5s;
+	position: relative;
+	overflow: hidden;
+}
+
+.exhibition-col1:hover{
+	box-shadow: 0 0 20px 0px;
+}
+
+.exhibition-col1 img{
+	margin-top: 5%;
+	width: 100%;
+	display: block;
+}
+
+.layer1{
+	background: transparent;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0;
+	transition: 0.5s;
+}
+
+.layer1:hover{
+	background: rgba(226,0,0,0.7);
+}
+
+.layer1 h3{
+	width: 100%;
+	font-weight: 500;
+	color: #fff;
+	font-size: 26px;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	position: absolute;
+	opacity: 0;
+	transition: 0.5s;
+}
+
+.layer1:hover h3{
+	bottom: 49%;
+	opacity: 1;
+}
+
+.row2{
+	margin-top: 5%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.exhibition-col2{
+	flex-basis: 45%;
+	background: #fff3f3;
+	border-radius: 10px;
+	margin-bottom: 5%;
+	padding: 20px 10px;
+	box-sizing: border-box;
+	transition: 0.5s;
+	position: relative;
+	overflow: hidden;
+}
+
+.exhibition-col2:hover{
+	box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+
+.exhibition-col2 img{
+	margin-top: 5%;
+	width: 100%;
+}
+
+.layer2{
+	background: transparent;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0;
+	transition: 0.5s;
+}
+
+.layer2:hover{
+	background: rgba(226,0,0,0.7);
+}
+
+.layer2 h3{
+	width: 100%;
+	font-weight: 500;
+	color: #fff;
+	font-size: 26px;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	position: absolute;
+	opacity: 0;
+	transition: 0.5s;
+}
+
+.layer2:hover h3{
+	bottom: 49%;
+	opacity: 1;
+}
+
+@media(max-width: 700px){
+	.row1{
+		flex-direction: column;
+	}
+	.row2{
+		flex-direction: column;
+	}
+}
+
+/* Testimonials */
+.row{
+	margin-top: 5%;
+	display: flex;
+	justify-content: space-between;
+}
+.testimonials{
+	width: 80%;
+	margin: auto;
+	padding-top: 100px;
+	text-align: center;
+}
+
+.testimonial-col{
+	flex-basis: 44%;
+	border-radius: 10px;
+	margin-bottom: 5%;
+	text-align: left;
+	background: #fff3f3;
+	padding: 25px;
+	cursor: pointer;
+	display: flex;
+}
+
+.testimonial-col img{
+	height: 40px;
+	margin-left: 5px;
+	margin-right: 30px;
+	border-radius: 50%;
+}
+
+.testimonial-col p{
+	padding: 0;
+}
+
+.testimonial-col h3{
+	margin-top: 15px;
+	text-align: left;
+}
+
+.testimonial-col .fas{
+	color: #f44336;
+}
+
+@media(max-width: 700px){
+	.testimonial-col img{
+		margin-left: 5px;
+		margin-right: 30px;
+	}
+}
+
+/* Contact Us */
+.cu{
+	margin: 100px auto;
+	width: 80%;
+	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/Banner.png);
+	background-position: center;
+	background-size: cover;
+	border-radius: 10px;
+	text-align: center;
+	padding: 100px 0;
+}
+
+.cu h1{
+	color: #fff;
+	margin-bottom: 40px;
+	padding: 0;
+}
+
+@media(max-width: 700px){
+	.cu h1{
+		font-size: 24px;
+	}
+}
+
+/* Footer */
+.footer{
+	width: 100%;
+	text-align: center;
+	padding: 30px 0;
+}
+
+.footer h4{
+	margin-bottom: 25px;
+	margin-top: 20px;
+	font-weight: 600;
+}
+.icons .fab{
+	color: #f44336;
+	margin: 0 13px;
+	cursor: 
+	paddin: 18px 0;
+}
+
+.far-heart-o{
+	color: #f44336;
 }
