--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ nav img {
 	padding: 12px 34px;
 	font-size: 13px;
 	background: transparent;
-	position: 
+	position: relative;
 	cursor: pointer;
 }
 
