--- a/style.css
+++ b/style.css
@@ -373,8 +373,8 @@ p{
 .icons .fab{
 	color: #f44336;
 	margin: 0 13px;
-	cursor: 
-	paddin: 18px 0;
+	cursor: pointer;
+	padding: 18px 0;
 }
 
 .far-heart-o{
