--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ nav img {
 	padding: 12px 34px;
 	font-size: 13px;
 	background: transparent;
-	position: 
+	position: relative;
 	cursor: pointer;
 }
 
@@ -373,10 +373,59 @@ p{
 .icons .fab{
 	color: #f44336;
 	margin: 0 13px;
-	cursor: 
-	paddin: 18px 0;
+	cursor: pointer;
+	padding: 18px 0;
 }
 
 .far-heart-o{
 	color: #f44336;
+}
+
+/* About Us Page */
+.sub-header{
+	height: 50vh;
+	width: 100%;
+	background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/Banner.png);
+	background-position: center;
+	background-size: cover;
+	text-align: center;
+	color: #fff;
+}
+
+.sub-header h1{
+	margin-top: 100px;
+}
+
+.about-us{
+	width: 80%;
+	margin: auto;
+	padding-top: 80px;
+	padding-bottom: 50px;
+}
+
+.about-col{
+	flex-basis: 48%;
+	padding: 30px 2px;	
+}
+
+.about-col img{
+	width: 100%;
+}
+
+.about-col h1{
+	padding-top: 0;
+}
+
+.about-col p{
+	padding: 15px 0 25px;
+}
+
+.red-btn{
+	border: 1px solid #f44336;
+	background: transparent;
+	color: #f44336;
+}
+
+.red-btn:hover{
+	color: #fff;
 }
