--- a/style.css
+++ b/style.css
@@ -336,6 +336,7 @@ p{
 .testimonial-col{
 	flex-basis: 44%;
 	border-radius: 10px;
+	margin-left: 20px;
 	margin-bottom: 5%;
 	text-align: left;
 	background: #fff3f3;
@@ -486,6 +487,7 @@ p{
 .contact-col {
 	flex-basis: 48%;
 	margin-bottom: 30px;
+	margin-left: 20px;
 }
 
 .contact-col div{
