--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ nav img {
 	color: #fff;
 	text-decoration: none;
 	font-size: 13px;
+	text-align: center;
 	display: block;
 	padding: 0 20px;
 }
@@ -65,7 +66,7 @@ nav img {
 }
 
 .nav-links ul li:hover ul{
-	opacity: 1;
+	opacity: 0.8;
 	visibility: visible;
 }
 
@@ -91,7 +92,7 @@ nav img {
 	width: 90%;
 	color: white;
 	position: absolute;
-	top: 50%;
+	top: 60%;
 	left: 50%;
 	transform: translate(-50%,-50%);
 	text-align: center;
